--- a/index.html
+++ b/index.html
@@ -5,27 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoFresh</title>
     
-    <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="img/favicons/logo.svg">
     
-    <!-- Google Fonts - Oswald -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header -->
+
     <header class="header">
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <img src="img/logo.Png" alt="EcoFresh" class="logo-img">
+                    <img src="img/logo.png" alt="EcoFresh" class="logo-img">
                 </div>
                 <div class="nav-menu">
                     <a href="#reviews" class="nav-link">Наши отзывы</a>
@@ -46,7 +41,6 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
     <section class="hero-section">
         <div class="hero-background"></div>
         <div class="container">
@@ -58,7 +52,6 @@
         </div>
     </section>
 
-    <!-- Products Section -->
     <section class="products-section">
         <div class="container">
             <h2 class="section-title">Наши продукты</h2>
@@ -88,7 +81,6 @@
         </div>
     </section>
 
-    <!-- Experts Section -->
     <section id="reviews" class="experts-section">
         <div class="container">
             <h2 class="section-title">Что о нас говорят эксперты?</h2>
@@ -127,9 +119,7 @@
         </div>
     </section>
 
-    <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
 </html>
